--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(SOURCES
     src/ui/MainWindow.cpp
 
     # Windows 아이콘 리소스
-    resource.rc
+    resource.qrc
 )
 
 # 헤더 파일 목록 (필요 시 명시, 보통 AUTOMOC이 처리함)
